--- a/class-id-selectors/class id selectors.css
+++ b/class-id-selectors/class id selectors.css
@@ -1,5 +1,5 @@
 .all-odd-numbered {
-    background-color: rgb(rgb(255, 180, 180);
+    background-color: rgb(255, 180, 180);
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 #second-element {
