--- a/flex/flex-header2/flex-hreader2.css
+++ b/flex/flex-header2/flex-hreader2.css
@@ -13,8 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  padding: 8px;
   justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -49,12 +49,17 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  margin: 0;
+  gap: 16px;
   padding: 0;
+  margin: 0;
+}
+.left {
+  display: flex;
+  align-items: center;
   gap: 16px;
 }
-.left, .right {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
+.right {
+  align-items: center;
+  display: flex;
+  gap: 16px;
+}
