--- a/flex/flex-layout/flex-layout.css
+++ b/flex/flex-layout/flex-layout.css
@@ -18,7 +18,6 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
-  padding: 8px 16px;
 }
 
 input {
@@ -28,42 +27,33 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
-.header {
-    display: flex;
-    justify-content: space-between;
-    padding: 0px;
-}
-.left-links {
-    list-style-type: none;
-    display: flex;
-    gap: 8px;
-}
-.right-links {
-    list-style-type: none;
-    display: flex;
-    gap: 8px;
-}
-.footer {
-    background-color: #eee;
-    display: flex;
-    justify-content: space-between;
-    padding: 0px;
-}
-.content {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-a {
-    color: #666;
-    text-decoration: none;
-  }
+
 ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 16px
+  display: flex;
+  list-style: none;
+  gap: 16px;
+  
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+a {
+  text-decoration: none;
+  color: #666;
 }
