--- a/flex/flex-header2/flex-hreader2.css
+++ b/flex/flex-header2/flex-hreader2.css
@@ -12,8 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 8px;
 }
 
@@ -48,18 +50,15 @@ a {
 
 ul {
   list-style-type: none;
+
+  display: flex;
+
+}
+
+
+.left-side, .right-side {
   display: flex;
   gap: 16px;
   padding: 0;
   margin: 0;
-}
-.left {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-.right {
-  align-items: center;
-  display: flex;
-  gap: 16px;
 }
