--- a/flex/flex-header2/flex-header2.css
+++ b/flex/flex-header2/flex-header2.css
@@ -15,8 +15,6 @@ body {
 
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 8px;
 }
 
 .profile-image {
@@ -46,19 +44,24 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+
 }
 
 ul {
   list-style-type: none;
 
   display: flex;
-
+  gap: 8px;
 }
 
-
-.left-side, .right-side {
+.left {
   display: flex;
-  gap: 16px;
-  padding: 0;
-  margin: 0;
+  align-items: center;
+  gap: 8px;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
