--- a/flex/flex-information/flex-information.css
+++ b/flex/flex-information/flex-information.css
@@ -1,36 +1,43 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
-  }
-  
-  img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .title {
-    font-size: 36px;
-    font-weight: 900;
-    margin-bottom: 32px;
-  }
-  
-  /* do not edit this footer */
-  .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 52px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #eee;
-  }
-  .container {
-    display: flex;
-    justify-content: center;
-    gap: 52px;
-  }
-  .info {
-      max-width: 200px;
-  }
+  font-family: 'Courier New', Courier, monospace;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 900;
+
+  text-align: center;
+  padding-bottom: 32px;
+}
+
+/* do not edit this footer */
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eee;
+}
+
+.buah {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 8px;
+  max-width: 200px;
+}
