--- a/flex/flex-layout/flex-layout.css
+++ b/flex/flex-layout/flex-layout.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
   display: flex;
   flex-direction: column;
 }
@@ -28,32 +29,39 @@ input {
   margin-bottom: 16px;
 }
 
-ul {
-  display: flex;
-  list-style: none;
-  gap: 16px;
-  
-}
-
-.header, .footer {
+.header {
   display: flex;
   justify-content: space-between;
-
 }
 
-.content {
+.left-links {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  flex: 1;
+  gap: 10px;
 }
 
-.footer {
-  background-color: #eeeeee;
+.right-links {
+  display: flex;
+  gap: 10px;
+}
+
+ul {
+  list-style: none;
 }
 
 a {
   text-decoration: none;
-  color: #666;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #eeeeee;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
