--- a/flex/flex-modal/flex-modal.css
+++ b/flex/flex-modal/flex-modal.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background: #aaa;
   color: #333;
-  /* I'll give you this one for free */
+  /* I'll give you this one for free lol */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,9 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
   display: flex;
-  gap: 16px;
-  padding: 16px;
+  padding: 8px;
+  gap: 8px
 }
 
 .icon {
@@ -36,6 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
   flex-shrink: 0;
 }
 
@@ -75,9 +77,4 @@ button.cancel {
   justify-content: space-between;
   font-size: 18px;
   font-weight: 700;
-  margin-bottom: 8px;
 }
-
-.text {
-    margin-bottom: 16px;
-  }
